@@ -1,5 +1,8 @@
 2001-04-25  Dave Peticolas  <dave@krondo.com>
 
+	* src/engine/gnc-transaction-xml-v2.c: read & write split action
+	field
+
 	* src/gnome/druid-commodity.c: do gncFileNew after gncFileQuit
 
 	* src/guile/gnc.gwp: remove pokey functions (not used anymore)
